--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.13.1"
-  }
+    "cypress": "^13.13.1",
+    "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "cypress-cucumber-preprocessor": { 
+    "nonGlobalStepDefinitions": true, 
+    "step_definitions": "cypress/e2e/newtours" }
 }
